update project structure

--- a/public/visit1.html
+++ b/public/visit1.html
@@ -15,15 +15,17 @@
     <div class="container">
       <div style="margin: 10px;">
         <ul class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="#">Project List</a></li>
-            <li role="presentation"><a href="project">Create Project</a></li>
-            <li role="presentation"><a href="about">About</a></li>
+            <li role="presentation"><a href="baseline">BaseLine</a></li>
+            <li role="presentation" class="active"><a href="#">Visit 1</a></li>
+            <li role="presentation"><a href="visit2">Visit 2</a></li>
         </ul>
       </div>
+
+
+      <div></div>
       <div class="jumbotron">
-        <h1>List of projects</h1>
-        <p class="lead">This example is a quick exercise to illustrate how the top-aligned navbar works. As you scroll, this navbar remains in its original position and moves with the rest of the page.</p>
-        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">View navbar docs &raquo;</a>
+        <h1>Visit 1</h1>
+        
       </div>
     </div>
 
