--- a/public/plasma_measurements.html
+++ b/public/plasma_measurements.html
@@ -92,18 +92,9 @@
       </nav>
 
 
-      <div style="margin: 10px;">
-        <ul class="nav nav-tabs">
-            <li role="presentation"><a href="baseline">BaseLine</a></li>
-            <li role="presentation" class="active"><a href="#">Visit 1</a></li>
-            <li role="presentation"><a href="visit2">Visit 2</a></li>
-        </ul>
-      </div>
-
-
       <div></div>
       <div class="jumbotron">
-        <h1>Visit 1</h1>
+        <h1>plasma measurment of patient XX</h1>
         
       </div>
 
@@ -140,18 +131,22 @@
     <div class="col-md-8 column">
       <div>
       <form>
-        <label>patients' name?  </label>  
-        <input type="text" name="patients_name"> input name here</input></br></br></br>
+        <label>Levels of total PSA in heparin plasma  </label>  
+        <input type="text" name="PSA_level"></input>mg/L</br></br></br>
 
-        <label>patients' ID?</label>
-        <input type="text" name="patients_id"> input ID here</input></br></br></br>
+        <label>Plasma carotenoids</label>
+        <input type="text" name="PSA_carotenoids"></input>ug/L</br></br></br>
+
+        <label>Polyunsaturated fatty acids in red blood cells</label>
+        <input type="text" name="fatty_acids_in_red_blood_cells"></input>/mL</br></br></br>
+
+        <label>Plasma selenium</label>
+        <input type="text" name="Plasma_selenium"></input>ug/L</br></br></br>
+
+
+        
       </form>
 
-        <label>plasma measurements</label>
-        <button onclick="{window.location.href='plasma_measurements.html'}">click here</button></br></br></br>
-
-        <label>serum measurements</label>
-        <button onclick="{window.location.href='serum_measurements.html'}">click here</button></br></br></br>
 
         <div style="margin:0 auto;width:200px;"> 
         <input class="submit" id="btn" type="submit" value="Submit" /> 
